Clean up nav tab sass and fix namespacing on subheader navs

--- a/app/styles/calcite/_header-custom.scss
+++ b/app/styles/calcite/_header-custom.scss
@@ -36,4 +36,7 @@
 		    padding-left: 0px;
 		}
 	}
+	.nav-tabs {
+	// ADD STYLES FOR TABS IN HEADER
+	}
 }
