--- a/app/styles/calcite/_navs-custom.scss
+++ b/app/styles/calcite/_navs-custom.scss
@@ -2,94 +2,22 @@
 // │ Navs - Custom │
 // └───────────────┘
 
-$lower-navbar-height: 36px;
+$subheader-navbar-height: 36px;
 $micro-navbar-height: 22px;
 
-.nav {
-  li a:focus {
-    background-color: $Calcite_Highlight_Blue_100;
-  }
-  .dropdown.open {
-    .dropdown-toggle {
-      background: $lightest-blue;
-      border-color: transparent;
-    }
-  }
-}
-
-.nav-tabs, .nav-pills {
-  li {
-    a {
-      background-color: transparent; // To add background to non-active tab
-      margin-right: 0;
-
-      &:hover {
-        background-color: $Calcite_Highlight_Blue_100;
-      }
-    }
-    .dropdown-menu {
-      li {
-        a:hover {
-          background-color: $Calcite_Gray_200;
-        }
-      }
-    }
-  }
-}
-
-.secondary-nav {
+.subheader-nav {
   position: relative;
-  min-height: $lower-navbar-height;
-  border-bottom: 1px solid $lighter-gray;
+  min-height: $subheader-navbar-height;
+  border-bottom: 1px solid $Calcite_Gray_300;
   margin-bottom: 0px;
-
-	.nav-pills {
-		> li {
-			+ li {
-				margin-left: 0px;
-			}
-			&.active > a {
-	      &,
-	      &:focus {
-	        color: $white;
-	        background-color: $lighter-gray;
-	      }
-	    }
-	    &.active > a {
-	      &:hover {
-	        color: $white !important;
-	        background-color: $lighter-gray;
-	      }
-	    }
-		}
-	}
+  margin-top: 0px;
 }
 
 .micronav {
 	font-size: $font-size-small;
-	background: $lighter-gray;
+	background: $Calcite_Gray_300;
   position: relative;
   min-height: $micro-navbar-height;
-  border-bottom: 1px solid $lighter-gray;
+  border-bottom: 1px solid $Calcite_Gray_300;
   margin-bottom: 0px;
-
-  .nav-pills {
-	  > li {
-	    + li {
-	      margin-left: 0px;
-	    }
-
-	    // Active state
-	    &.active > a {
-	      &,
-	      &:hover,
-	      &:focus {
-	        color: #fff;
-	        background-color: $light-gray;
-	      }
-	    }
-	  }
-	}
 }
-//== Notes
-// The radius corners on the tabs is removed with the global variable $border-radius-base in _components.
