--- a/app/styles/calcite/_navs-shared.scss
+++ b/app/styles/calcite/_navs-shared.scss
@@ -3,7 +3,7 @@
 // └─────────────────────────┘
 
 $nav-link-padding:                          6px 15px !default;
-$nav-link-hover-bg:                         transparentize($gray-base, .7) !default;
+$nav-link-hover-bg:                         $Calcite_Highlight_Blue_100 !default;
 
 $nav-disabled-link-color:                   $gray-light !default;
 $nav-disabled-link-hover-color:             $gray-light !default;
