--- a/app/styles/calcite/_navs-tabs-custom.scss
+++ b/app/styles/calcite/_navs-tabs-custom.scss
@@ -3,33 +3,27 @@
 // └────────────────────┘
 
 .nav-tabs {
-  border-bottom: 1px solid $Calcite_Gray_400;
-  li {
-    marign-bottom: 0;
-    border-top: 3px solid transparent;
-    top: -2px;
-    position: relative;
-
-    &.active {
-      border-top: 1px solid;
-      border-left: 1px solid;
-      border-right: 1px solid;
-      border-color: $Calcite_Gray_400;
-      top: 2px;
+  > li {
+    > a {
+      border: 1px solid transparent;
+      border-left: 0px;
+      border-right: 0px;
       &:hover {
-        border-top: 1px solid $Calcite_Gray_400;
+        padding-top: 4px;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        border-color: $brand-primary;
+        border-bottom: 1px solid $nav-tabs-border-color;
+        border-top: 3px solid $brand-primary;
       }
     }
-    &:hover {
-      border-top: 3px solid $brand-primary;
-    }
   }
 }
 
-.nav-tabs.nav-justified {
-  li.active {
-    border: 0;
-    top: -2px;
+// Compensate for active tab inheriting the padding top on hover from above 
+.nav-tabs > li.active > a {
+  &:hover {
+    padding-top: 6px;
   }
 }
-
